[gd_scene load_steps=6 format=3 uid="uid://birnxsmatoybo"]

[ext_resource type="Script" path="res://Resource/FarmNode.gd" id="1_3mhk2"]
[ext_resource type="Texture2D" uid="uid://cpyayd120hek" path="res://Artwork/Atlase/Enviroment/Spring/FarmTiles.png" id="2_3pf85"]
[ext_resource type="Texture2D" uid="uid://d0j5jig5pwsn8" path="res://Artwork/Atlase/spring/crops.png" id="3_jqm3t"]
[ext_resource type="Script" path="res://Skripts/Utilities/CropOutlet.gd" id="4_lgpww"]

[sub_resource type="CircleShape2D" id="CircleShape2D_s41dd"]
radius = 32.0

[node name="FarmNode" type="Area2D"]
script = ExtResource("1_3mhk2")

[node name="collisionShape2d" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_s41dd")

[node name="Base" type="Sprite2D" parent="."]
texture = ExtResource("2_3pf85")
region_enabled = true
region_rect = Rect2(0, 128, 64, 64)

[node name="CropOutlet" type="Sprite2D" parent="."]
position = Vector2(0, -26)
texture = ExtResource("3_jqm3t")
hframes = 10
vframes = 10
script = ExtResource("4_lgpww")

[connection signal="area_entered" from="." to="." method="_on_farm_node_area_entered"]
